<resources>

    <string name="app_name">Krakaline Shuttle</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_dari">Keberangkatan</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="action_done">Done</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Nomor Telepon</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="eror_login">Username Atau Password Tidak Valid</string>
    <string name="eror_reg">Username atau Email sudah ada</string>
    <string name="eror_pesan">Server error</string>
    <string name="edit_akun">Data Akun Anda Berhasil diubah</string>
    <string name="eror_lupa">Email Anda tidak ada di Server Kami</string>
    <string name="message_no_network_connection">Tidak Ada Koneksi Jaringan</string>
    <string name="message_no_time">Tidak Ada Lagi Jam Keberangkatan</string>
    <string name="err_msg_name">Masukkan Nama Lengkap Anda</string>
    <string name="err_msg_alm">Masukkan Alamat Tinggal Anda</string>
    <string name="err_msg_uname">Masukkan Username</string>
    <string name="err_msg_email">Masukkan Email Anda</string>
    <string name="err_msg_password">Masukkan Password Anda</string>
    <string name="err_msg_phone">Masukkan Nomor Telepon Anda</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_register">register</string>
    <string name="menu_open">open</string>
    <string name="font_light">sans-serif.ttf</string>
    <string name="menu_close">close</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="total">Total :</string>
    <string name="drawer_open">aya</string>
    <string name="drawer_close">can aya bray</string>
    <string name="message_max_pessenger">Jumlah kursi telah sesuai dengan jumlah penumpang</string>
    <string name="price_seat">Harga :</string>
    <string name="message_no_passenger_selected">Tidak ada penumpang yang dipilih</string>
    <string name="dismiss_button_text">BATAL</string>
    <string name="add_button_text">OK</string>
    <string name="title_add_passenger">Tambah Penumpang</string>
    <string name="hint_first_name">Nama Lengkap</string>
    <string name="message_form_not_complete">Lengkapi data penumpang</string>
    <string name="message_delete_passenger">Hapus Penumpang</string>
    <string name="title_attention">Perhatian</string>
    <string name="action_delete">HAPUS</string>
    <string name="message_passenger_less">Pilih kursi sesuai jumlah penumpang</string>
    <string name="action_agree">Setuju</string>
    <string name="action_ya">Ya</string>
    <string name="action_no">Tidak</string>
    <string name="eror_jml">Pilih penumpang sesuai jumlah kursi yang tersedia</string>
    <string name="action_unpaid">Belum dibayar</string>
    <string name="action_progress">Pending</string>
    <string name="action_paid">Lunas</string>
    <string name="action_filter">Filter</string>
    <string name="action_all">Semua</string>
    <string name="eror_upload">Upload Gagal Silahkan Upload kembali</string>
    <string name="eror_pesan_lebih"><![CDATA[Anda sudah melakukan 2 kali pemesanan pada tanggal dan jam yang sama mohon menunggu konfirmasi]]></string>
    <string name="message_att">Apakah anda yakin untuk membatalkan tiket ini</string>
    <string name="eror_batal">Anda Sudah Tidak dapat Melakukan Pembatalan Karena Sudah Melebihi Batas Waktu</string>
    <string name="action_habis">Waktu Pemesanan Habis</string>
    <string name="eror_cam">Maaf Device Anda Tidak Mendukung Kamera Silahkan Memilih menu Pilih Gambar</string>

</resources>
