<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <include android:id="@+id/toolbar" layout="@layout/action_mode_tambah_penumpang" />
        <TextView android:layout_width="match_parent" android:layout_height="40dp" android:text="@string/title_add_passenger"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center|center_horizontal"
            android:background="@color/colorPrimary" />
        <View android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:background="@drawable/divider_section_top" android:layout_width="match_parent" android:layout_height="1dp" />
        <LinearLayout android:orientation="vertical"  android:padding="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/nama_depan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <View android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:background="@drawable/divider_section_bottom" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>
</ScrollView>
